@@ -19,6 +19,8 @@
 // NOTE: this is code is heavily based on Tomas Davidovic's SmallVCM
 // (http://www.davidovic.cz and http://www.smallvcm.com)
 
+#include "luxrays/utils/thread.h"
+
 #include "slg/engines/bidircpu/bidircpu.h"
 
 using namespace std;
@@ -526,27 +528,12 @@ void BiDirCPURenderThread::RenderFunc() {
 	// Initialization
 	//--------------------------------------------------------------------------
 
+	// This is really used only by Windows for 64+ threads support
+	SetThreadGroupAffinity(threadIndex);
+
 	BiDirCPURenderEngine *engine = (BiDirCPURenderEngine *)renderEngine;
 	// (engine->seedBase + 1) seed is used for sharedRndGen
 
-	//Set thread affinity the modern way.May not work for Windows version prior to Windows7
-#if defined(_WIN32) || defined(WIN32) || defined(_WIN64) || defined (WIN64)
-	auto totalProcessors = 0U;
-	int processorIndex = threadIndex % GetActiveProcessorCount(ALL_PROCESSOR_GROUPS);
-
-	// Determine which processor group to bind the thread to.
-	for (auto i = 0U; i < GetActiveProcessorGroupCount(); ++i)
-	{
-		totalProcessors += GetActiveProcessorCount(i);
-		if (totalProcessors >= processorIndex)
-		{
-			auto mask = (1ULL << GetActiveProcessorCount(i)) - 1;
-			GROUP_AFFINITY groupAffinity = { mask, static_cast<WORD>(i), { 0, 0, 0 } };
-			SetThreadGroupAffinity(GetCurrentThread(), &groupAffinity, nullptr);
-			break;
-		}
-	}
-#endif
 	RandomGenerator *rndGen = new RandomGenerator(engine->seedBase + 1 + threadIndex);
 	Scene *scene = engine->renderConfig->scene;
 	Camera *camera = scene->camera;
